--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,6 @@
-@import url('~@fontsource/anton');
-@import url('~@fontsource/poppins');
+@import url('@fontsource/anton');
+@import url('@fontsource/poppins/');
+@import url('@fontsource/poppins/600.css');
 
 @tailwind base;
 @tailwind components;
@@ -39,4 +40,36 @@ body {
 	@apply bg-wheat;
 	@apply text-darkgrey;
 	@apply text-poppins;
+}
+
+.slick-slide {
+	height: 100%;
+}
+  
+.slick-track {
+	display: flex !important;
+	align-items: center;
+}
+
+@media only screen and (max-width : 768px) {
+	.animate__animated {
+		/*CSS transitions*/
+		-o-transition-property: none !important;
+		-moz-transition-property: none !important;
+		-ms-transition-property: none !important;
+		-webkit-transition-property: none !important;
+		transition-property: none !important;
+		/*CSS transforms*/
+		-o-transform: none !important;
+		-moz-transform: none !important;
+		-ms-transform: none !important;
+		-webkit-transform: none !important;
+		transform: none !important;
+		/*CSS animations*/
+		-webkit-animation: none !important;
+		-moz-animation: none !important;
+		-o-animation: none !important;
+		-ms-animation: none !important;
+		animation: none !important;
+	}
 }
